# ape

./: .gitignore  Cargo.toml  build.rs
src/: ap_remote.rs  audio.rs  buildbot.rs  core.rs  environment.rs  environment_command.rs  gui.rs  hook.rs  input.rs  main.rs  remote.rs  util.rs  video.rs
src/ap_remote/: request.rs  response.rs
src/core/: api.rs  callbacks.rs  handle.rs  memory_map.rs  state.rs
src/core/callbacks/: ffi.rs
src/environment/: command.rs  mod.rs
src/gui/: input.rs
src/input/: gilrs.rs
