[package]
name = "ape"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
atomicwrites = "0.4.3"
bstr = "1.9.0"
clap = { version = "4.5.0", features = [
    "derive",
    "color",
    "suggestions",
    "env",
] }
custom_debug = "0.6.1"
dotenv = "0.15.0"
eframe = "0.26.2"
egui = "0.26.2"
# xinput allows receiving input without window being focused
gilrs = { version = "0.10.4", default-features = false, features = ["xinput"] }
indexmap = "2.2.3"
itertools = "0.12.1"
libloading = "0.8.1"
libretro-sys = "0.1.1"
minifb = "0.25.0"
rodio = { version = "0.17.3", default-features = false }
rubato = "0.14.1"
strum = { version = "0.26.1", features = ["derive"] }

[target.'cfg(windows)'.build-dependencies]
winres = "0.1.12"
